--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
           <a mat-menu-item [routerLink]="['addraport']"><mat-icon aria-hidden="false" aria-label="post_add">post_add</mat-icon> Dodaj Raport</a>
         </mat-menu>
         
-        <a routerLinkActive="active" [routerLink]="['apartments']" mat-button><mat-icon aria-hidden="false" aria-label="domain">domain</mat-icon> Mieszkania</a>
+        <a routerLinkActive="active" [routerLink]="['apartments']" mat-button><mat-icon aria-hidden="false" aria-label="domain">domain</mat-icon> Lokale</a>
         <a routerLinkActive="active" [routerLink]="['users']" mat-button><mat-icon aria-hidden="false" aria-label="supervisor_account">supervisor_account</mat-icon> Użytkownicy</a>
         <a routerLinkActive="active" [routerLink]="['payments']" mat-button><mat-icon aria-hidden="false" aria-label="payments">payments</mat-icon> Płatności</a>
       </span>      
