--- a/src/app/components/admin/apartments/apartments.component.html
+++ b/src/app/components/admin/apartments/apartments.component.html
@@ -7,7 +7,7 @@
     </div>
     <div fxFlex fxLayoutAlign="center center">
       <a mat-raised-button color="primary" (click)="addApartment()">
-        <mat-icon aria-hidden="false" aria-label="person_add">person_add</mat-icon> Dodaj Mieszkanie
+        <mat-icon aria-hidden="false" aria-label="person_add">person_add</mat-icon> Dodaj Lokal
       </a>
     </div>
   </div>
