--- a/src/app/components/admin/payments/payments.component.html
+++ b/src/app/components/admin/payments/payments.component.html
@@ -8,7 +8,7 @@
     </div>
     <div fxFlex fxLayoutAlign="center center">
       <a mat-raised-button color="primary" (click)="addPayment()">
-        <mat-icon aria-hidden="false" aria-label="person_add">person_add</mat-icon> Dodaj Płatność
+        <mat-icon aria-hidden="false" aria-label="person_add">account_balance_wallet</mat-icon> Dodaj Płatność
       </a>
     </div>
   </div>
@@ -61,10 +61,6 @@
                 <button mat-menu-item (click)="redirectToDelete(element)">
                   <mat-icon>delete</mat-icon>
                   <span>Usuń</span>
-                </button>
-                <button mat-menu-item>
-                  <mat-icon>visibility</mat-icon>
-                  <span>Wyświetl Więcej</span>
                 </button>
               </mat-menu>
             </td>
