--- a/src/app/components/admin/users/users-add/users-add.component.html
+++ b/src/app/components/admin/users/users-add/users-add.component.html
@@ -51,7 +51,7 @@
           <div class="col">
             <mat-form-field appearance="fill">
               <mat-label>Kod Pocztowy</mat-label>
-              <input matInput placeholder="Kod Pocztowy" formControlName="postcode" required>
+              <input matInput placeholder="XX-XXX" formControlName="postcode">
             </mat-form-field>
           </div>
         </div>
@@ -74,7 +74,7 @@
   
         <div class="row my-2">
           <div class="col ">
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" fxFlex>
               <mat-label>Rachunek Bankowy</mat-label>
               <input matInput placeholder="Rachunek Bankowy" formControlName="bankaccount" placeholder="61 1090 1014 0000 0712 1981 2874"/>
             </mat-form-field>
