--- a/src/app/components/admin/raports/raports.component.html
+++ b/src/app/components/admin/raports/raports.component.html
@@ -15,13 +15,13 @@
         <table mat-table [dataSource]="dataSource" matSort>
    
           <ng-container matColumnDef="number">
-            <th mat-header-cell *matHeaderCellDef> Numer Faktury</th>
-            <td mat-cell *matCellDef="let element"> #{{element.number}}</td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Numer</th>
+            <td mat-cell *matCellDef="let element">#{{element.number}}</td>
           </ng-container>
         
           <ng-container matColumnDef="owner">
-            <th mat-header-cell *matHeaderCellDef> Użytkownik</th>
-            <td mat-cell *matCellDef="let element"> {{element.user.name}} {{element.user.lastname}}</td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Użytkownik</th>
+            <td mat-cell *matCellDef="let element">{{element.fullname}}</td>
           </ng-container>
         
           <ng-container matColumnDef="apartment">
@@ -53,13 +53,13 @@
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu">
+                <button mat-menu-item [routerLink]="['/user/raports/', element.uid]">
+                  <mat-icon>visibility</mat-icon>
+                  <span>Podgląd</span>
+                </button>
                 <button mat-menu-item (click)="redirectToDelete(element)">
                   <mat-icon>delete</mat-icon>
                   <span>Usuń</span>
-                </button>
-                <button mat-menu-item >
-                  <mat-icon>visibility</mat-icon>
-                  <span>Wyświetl Więcej</span>
                 </button>
               </mat-menu> 
             </td>
