--- a/src/app/components/admin/users/users.component.html
+++ b/src/app/components/admin/users/users.component.html
@@ -58,6 +58,12 @@
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Telefon Kontaktowy </th>
               <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
             </ng-container>
+
+            <ng-container matColumnDef="verifyemail">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Weryfikacja Email </th>
+              <td mat-cell *matCellDef="let element"><span *ngIf="element.verifyemail; else noemail">Tak</span></td>
+              <ng-template #noemail>Nie</ng-template>
+          </ng-container>
     
             <ng-container matColumnDef="admin">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Moderator </th>
@@ -80,6 +86,10 @@
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="resetpassword(element.email)">
+                  <mat-icon>restart_alt</mat-icon>
+                  <span>Reset Hasła</span>
+                </button>
                 <button mat-menu-item (click)="redirectToEdit(element)">
                   <mat-icon>edit</mat-icon>
                   <span>Edytuj</span>
