--- a/src/app/components/admin/users/users-edit/users-edit.component.html
+++ b/src/app/components/admin/users/users-edit/users-edit.component.html
@@ -113,11 +113,8 @@
             <div class="col-12">
               <mat-form-field appearance="legacy" class="fullwidth">
                 <mat-label>Rachunek Bankowy:</mat-label>
-                <!-- <input matInput type="text" [(ngModel)]="data.bankaccount" formControlName="bankaccount"
-                  placeholder="61 1090 1014 0000 0712 1981 2874" /> -->
                   <input matInput type="text" [(ngModel)]="data.bankaccount" formControlName="bankaccount"
-                  placeholder="61 1090 1014 0000 0712 1981 2874" />
-
+                  placeholder="Rachunek Bankowy" />
                 <mat-icon matSuffix>account_balance</mat-icon>
                 <mat-hint>Rachunek Bankowy</mat-hint>
               </mat-form-field>
@@ -127,11 +124,9 @@
   
   
           <div class="row mt-3">
-  
             <div class="col-6">
               <mat-slide-toggle formControlName="moderator">Uprawnienia Moderatora</mat-slide-toggle>
             </div>
-  
           </div>
   
           <div class="row">
