--- a/src/app/components/admin/users/users-edit/users-edit.component.html
+++ b/src/app/components/admin/users/users-edit/users-edit.component.html
@@ -8,7 +8,7 @@
           <div class="row mt-4">
   
             <div class="col-6">
-              <mat-form-field appearance="legacy">
+              <mat-form-field appearance="outline">
                 <mat-label>Imię:</mat-label>
                 <input matInput type="text" [(ngModel)]="data.name" formControlName="name" placeholder="Imię" />
                 <mat-icon matSuffix>badge</mat-icon>
@@ -23,7 +23,7 @@
             </div>
   
             <div class="col-6">
-              <mat-form-field appearance="legacy">
+              <mat-form-field appearance="outline">
                 <mat-label>Nazwisko:</mat-label>
                 <input matInput type="text" [(ngModel)]="data.lastname" formControlName="lastname"
                   placeholder="Nazwisko" />
@@ -44,7 +44,7 @@
           <div class="row">
   
             <div class="col-6">
-              <mat-form-field appearance="legacy">
+              <mat-form-field appearance="outline">
                 <mat-label>Adres:</mat-label>
                 <input matInput type="text" [(ngModel)]="data.address" formControlName="address" placeholder="Adres" />
                 <mat-icon matSuffix>approval</mat-icon>
@@ -59,7 +59,7 @@
             </div>
   
             <div class="col-6">
-              <mat-form-field appearance="legacy">
+              <mat-form-field appearance="outline">
                 <mat-label>Kod Pocztowy:</mat-label>
                 <input matInput type="text" [(ngModel)]="data.postcode" formControlName="postcode"
                   placeholder="Kod Pocztowy" />
@@ -73,7 +73,7 @@
           <div class="row mt-3">
   
             <div class="col-6">
-              <mat-form-field appearance="legacy">
+              <mat-form-field appearance="outline">
                 <mat-label>Miasto:</mat-label>
                 <input matInput type="text" [(ngModel)]="data.city" formControlName="city" placeholder="Miasto" />
                 <mat-icon matSuffix>cottage</mat-icon>
@@ -88,7 +88,7 @@
             </div>
   
             <div class="col-6">
-              <mat-form-field appearance="legacy">
+              <mat-form-field appearance="outline">
                 <mat-label>Kontakt Telefoniczny:</mat-label>
                 <input matInput type="text" [(ngModel)]="data.phone" formControlName="phone"
                   placeholder="Kontakt Telefoniczny" />
@@ -111,7 +111,7 @@
   
           <div class="row">
             <div class="col-12">
-              <mat-form-field appearance="legacy" class="fullwidth">
+              <mat-form-field appearance="outline" class="fullwidth">
                 <mat-label>Rachunek Bankowy:</mat-label>
                   <input matInput type="text" [(ngModel)]="data.bankaccount" formControlName="bankaccount"
                   placeholder="Rachunek Bankowy" />
