--- a/src/app/components/user/user-raports-view/user-raports-view.component.scss
+++ b/src/app/components/user/user-raports-view/user-raports-view.component.scss
@@ -21,8 +21,13 @@
     }
 }
 
-.footer-row {
-    text-align: right;
+.footer {
+    text-align: center;
+
+    .col {
+        border: 1px solid #ddd;
+        padding: 20px;
+    }
 }
 
 .demo-table {
