--- a/src/app/components/admin/apartments/apartments.component.html
+++ b/src/app/components/admin/apartments/apartments.component.html
@@ -16,11 +16,16 @@
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" matSort>
 
-        <ng-container matColumnDef="owner">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Właściciel </th>
-          <td mat-cell *matCellDef="let element"> {{element.ownername}} </td>
+        <ng-container matColumnDef="ownername">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Imię </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
-
+        
+        <ng-container matColumnDef="ownerlastname">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Nazwisko </th>
+          <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
+        </ng-container>
+        
         <ng-container matColumnDef="street">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Ulica </th>
           <td mat-cell *matCellDef="let element"> {{element.street}} </td>
@@ -42,7 +47,7 @@
         </ng-container>
 
         <ng-container matColumnDef="apartmentnumber">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Numer Mieszkania </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Numer Lokalu </th>
           <td mat-cell *matCellDef="let element"> {{element.apartmentnumber}}</td>
         </ng-container>
 
