--- a/src/app/components/admin/payments/payments-add/payments-add.component.html
+++ b/src/app/components/admin/payments/payments-add/payments-add.component.html
@@ -5,7 +5,7 @@
         <div class="row my-3">
           <div class="col-3">
 
-              <mat-form-field appearance="fill">
+              <mat-form-field appearance="outline">
                 <mat-label>Użytkownik</mat-label>
                 <mat-select formControlName="user" (selectionChange)="selectUser($event)" placeholder="Wybierz użytkownika" required>
                   <mat-option *ngFor="let user of users | async" [value]="user">{{user.name}} {{user.lastname}}</mat-option></mat-select>
@@ -14,15 +14,15 @@
         </div>
         <div class="row">
           <div class="col">
-            <mat-form-field appearance="fill" floatLabel="always">
+            <mat-form-field appearance="outline" floatLabel="always">
               <mat-label>Kwota</mat-label>
               <input formControlName="price" matInput type="number" step="0.01" min="0.00" oninput="validity.valid||(value='');" class="example-right-align" placeholder="0,00">
               <span matPrefix>zł&nbsp;</span>
             </mat-form-field>
           </div>
           <div class="col">
-            <mat-form-field appearance="fill">
-              <mat-label>RODZAJ</mat-label>
+            <mat-form-field appearance="outline">
+              <mat-label>Status</mat-label>
               <mat-select formControlName="status">
                 <mat-option *ngFor="let f of form" [value]="f.label">
                   {{f.label}}
@@ -34,8 +34,8 @@
         </div>
         <div class="row">
           <div class="col">
-            <mat-form-field appearance="fill">
-              <mat-label>Data zatwierdzenia wpłaty</mat-label>
+            <mat-form-field appearance="outline">
+              <mat-label>Data zaksięgowania</mat-label>
               <input formControlName="date" matInput [matDatepicker]="picker">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
