--- a/src/app/components/admin/payments/payments-edit/payments-edit.component.html
+++ b/src/app/components/admin/payments/payments-edit/payments-edit.component.html
@@ -4,16 +4,16 @@
       <ng-template matStepLabel>Edytuj Płatność</ng-template>
       <div class="row my-3">
         <div class="col">
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="outline">
               <mat-label>Użytkownik</mat-label>
-              <mat-select formControlName="user" [(ngModel)]="data.user.uid" (selectionChange)="selectUser($event)" placeholder="Wybierz użytkownika" required>
-                <mat-option *ngFor="let user of users" [value]="user.uid">{{user.name}} {{user.lastname}}</mat-option>
+              <mat-select formControlName="user" (selectionChange)="selectUser($event)" placeholder="Wybierz użytkownika" required>
+                <mat-option *ngFor="let user of users | async" [value]="user.uid">{{user.name}} {{user.lastname}}</mat-option>
               </mat-select>
               <mat-hint>Wybierz użytkownika</mat-hint>
             </mat-form-field>
           </div>
           <div class="col">
-            <mat-form-field appearance="fill" floatLabel="always">
+            <mat-form-field appearance="outline" floatLabel="always">
               <mat-label>Kwota</mat-label>
               <input formControlName="price" [(ngModel)]="data.price" matInput type="number" step="0.01" min="0.00" oninput="validity.valid||(value='');" class="example-right-align" placeholder="0.00">
               <span matPrefix>zł&nbsp;</span>
@@ -24,7 +24,7 @@
       </div>
       <div class="row my-3">
         <div class="col">
-          <mat-form-field appearance="fill">
+          <mat-form-field appearance="outline">
             <mat-label>Status</mat-label>
             <mat-select formControlName="status" [(ngModel)]="data.status">
               <mat-option *ngFor="let f of form" [value]="f.label">
@@ -38,7 +38,7 @@
       </div>
       <div class="row my-3">
         <div class="col">
-          <mat-form-field appearance="fill">
+          <mat-form-field appearance="outline">
             <mat-label>Data</mat-label>
             <input formControlName="date" matInput [matDatepicker]="picker">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
