--- a/src/app/components/admin/users/users.component.html
+++ b/src/app/components/admin/users/users.component.html
@@ -18,7 +18,7 @@
         <table mat-table [dataSource]="dataSource" matSort>
     
           <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Pozycja </th>
+            <th mat-header-cell *matHeaderCellDef> Pozycja </th>
             <td mat-cell *matCellDef="let element; let i = index">{{i+1}}</td>
           </ng-container>
         
