--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
       </mat-menu>
 
       
-      <span *ngIf="(authService.userInfo.getValue().moderator); else NoMod">
+      <span *ngIf="(authService.userMod); else NoMod">
 
         <a routerLinkActive="active" mat-button [matMenuTriggerFor]="raports"><mat-icon aria-hidden="false" aria-label="ballot">ballot</mat-icon> Raporty</a>
         <mat-menu #raports="matMenu">
