--- a/src/app/components/admin/apartments/apartments-add/apartments-add.component.html
+++ b/src/app/components/admin/apartments/apartments-add/apartments-add.component.html
@@ -4,7 +4,6 @@
         <ng-template matStepLabel>Podstawowe Dane</ng-template>
         <div class="row my-3">
           <div class="col-3">
-
               <mat-form-field appearance="outline">
                 <mat-label>Użytkownik</mat-label>
                 <mat-select formControlName="owner" (selectionChange)="selectUser($event)" placeholder="Wybierz użytkownika">
@@ -17,18 +16,22 @@
             <mat-form-field class="my-2" appearance="outline">
               <mat-label>Ulica</mat-label>
               <input matInput placeholder="Ulica" formControlName="street">
+              <mat-error *ngIf="firstFormGroup.controls['street'].hasError('required')">Ulica jest wymagana</mat-error>
             </mat-form-field>
           </div>
           <div class="col">
             <mat-form-field class="my-2" appearance="outline">
               <mat-label>Numer Budynku</mat-label>
               <input matInput placeholder="Numer Budynku" formControlName="buildingnumber">
+              <mat-error *ngIf="firstFormGroup.controls['buildingnumber'].hasError('required')">Numer Budynku jest wymagany</mat-error>
             </mat-form-field>
           </div>
           <div class="col">
             <mat-form-field class="my-2" appearance="outline">
               <mat-label>Numer Lokalu</mat-label>
               <input matInput placeholder="Numer Mieszkania" formControlName="apartmentnumber">
+              <mat-error *ngIf="firstFormGroup.controls['apartmentnumber'].hasError('required')">Numer Lokalu jest wymagany</mat-error>
+
             </mat-form-field>
           </div>
         </div>
@@ -37,18 +40,22 @@
             <mat-form-field class="my-2" appearance="outline">
               <mat-label>Kod Pocztowy</mat-label>
               <input matInput placeholder="Kod Pocztowy" formControlName="postcode" >
+              <mat-error *ngIf="firstFormGroup.controls['postcode'].hasError('required')">Kod Pocztowy jest wymagany</mat-error>
+
             </mat-form-field>
           </div>
           <div class="col">
             <mat-form-field class="my-2" appearance="outline">
               <mat-label>Powierzchnia (m2)</mat-label>
               <input matInput placeholder="Np. 2.05" formControlName="area" min="0.01" step="0.01">
+              <mat-error *ngIf="firstFormGroup.controls['postcode'].hasError('required')">Powierzchnia jest wymagana</mat-error>
             </mat-form-field>
           </div>
           <div class="col">
             <mat-form-field class="my-2" appearance="outline">
               <mat-label>Stawka (za m2)</mat-label>
               <input matInput placeholder="Np. 1.39" formControlName="rate" min="0.01" step="0.01">
+              <mat-error *ngIf="firstFormGroup.controls['rate'].hasError('required')">Stawka jest wymagana</mat-error>
             </mat-form-field>
           </div>
         </div>
