--- a/src/app/components/admin/payments/payments-edit/payments-edit.component.html
+++ b/src/app/components/admin/payments/payments-edit/payments-edit.component.html
@@ -15,7 +15,7 @@
           <div class="col">
             <mat-form-field appearance="outline" floatLabel="always">
               <mat-label>Kwota</mat-label>
-              <input formControlName="price" [(ngModel)]="data.price" matInput type="number" step="0.01" min="0.00" oninput="validity.valid||(value='');" class="example-right-align" placeholder="0.00">
+              <input formControlName="amount" [(ngModel)]="data.amount" matInput type="number" step="0.01" min="0.00" oninput="validity.valid||(value='');" class="example-right-align" placeholder="0.00">
               <span matPrefix>zł&nbsp;</span>
               <mat-hint>Kwota</mat-hint>
             </mat-form-field>
