--- a/src/app/components/admin/payments/payments.component.html
+++ b/src/app/components/admin/payments/payments.component.html
@@ -32,9 +32,9 @@
             <td mat-cell *matCellDef="let element">{{element.lastname}}</td>
           </ng-container>
 
-          <ng-container matColumnDef="price">
+          <ng-container matColumnDef="amount">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Kwota Wpłaty </th>
-            <td mat-cell *matCellDef="let element">{{element.price}} zł</td>
+            <td mat-cell *matCellDef="let element">{{element.amount}} zł</td>
           </ng-container>
 
           <ng-container matColumnDef="status">
