--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="authService.isLoggedIn">
-  <div class="container-fluid mt-5">
+  <div class="container my-4">
 
     <div *ngIf="authService.userInfo.getValue() as user">
       <div class="row m-2" *ngIf="!user.moderator">
@@ -81,9 +81,7 @@
         </div>
       </div>
     </div>
-
-
-    <div *ngIf="authService.userMod == true">
+    <div *ngIf="authService.userMod | async">
       <form [formGroup]="form" (ngSubmit)="saveCommunityName()" fxFlex fxLayout="column">
         <div fxLayout="column" fxFlex fxLayoutGap="20">
           <div class="row" fxLayout="row" fxLayout.md="column" fxLayout.sm ="column" fxLayout.xs="column" fxFlex fxLayoutGap="20">
